--- a/branches/branch_filesharing/CMakeLists.txt
+++ b/branches/branch_filesharing/CMakeLists.txt
@@ -76,6 +76,8 @@ endif(PCAP_FOUND)
 # CPP Definitions:
 # ################
 
+set(CMAKE_CXX_STANDARD 17)
+
 add_definitions(-DCONFDIR=\"/etc\")
 
 # Test for large file support:
