--- a/branches/branch_filesharing/src/slirp/CMakeLists.txt
+++ b/branches/branch_filesharing/src/slirp/CMakeLists.txt
@@ -26,7 +26,7 @@ add_library(Slirp
             tcp_input.c tcp_output.c tcp_subr.c tcp_timer.c tftp.c udp.c
 
             nfs/compat.cpp
-            nfs/XDRStream.cpp nfs/Socket.cpp nfs/TCPServerSocket.cpp nfs/UDPServerSocket.cpp
+            nfs/XDRStream.cpp nfs/CSocket.cpp nfs/TCPServerSocket.cpp nfs/UDPServerSocket.cpp
             nfs/nfsd.cpp nfs/RPCServer.cpp nfs/VDNS.cpp
             nfs/RPCProg.cpp nfs/PortmapProg.cpp nfs/MountProg.cpp nfs/NFSProg.cpp nfs/NFS2Prog.cpp nfs/BootparamProg.cpp nfs/NetInfoProg.cpp nfs/NetInfoBindProg.cpp
             nfs/FileTableNFSD.cpp ../ditool/VirtualFS.cpp
